k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
  namespace: blue-green
spec:
  ingressClassName: nginx

  rules:
    - host: bluegreen.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-green-active
                port:
                  number: 80
